--- a/index.html
+++ b/index.html
@@ -8,30 +8,34 @@
   </head>
   <body>
     <div class="all-calc">
-      <input type="text" id="ip-text" value="" placeholder="calculate here...">
+      <input type="text" id="ip-text" placeholder="0" disabled>
       <div class="btn-grp">
-        <input type="button" class="btn btn-primary" id="btn9" value="9" onclick="display(9)">
-        <input type="button" class="btn btn-primary" id="btn8" value="8" onclick="display(8)">
-        <input type="button" class="btn btn-primary" id="btn7" value="7" onclick="display(7)">
-        <input type="button" class="btn btn-primary" id="btnPlus" value="+" onclick="plus()">
+        <input type="button" class="btn btn-dark" value="9" onclick="display(9)">
+        <input type="button" class="btn btn-dark" value="8" onclick="display(8)">
+        <input type="button" class="btn btn-dark" value="7" onclick="display(7)">
+        <input type="button" class="btn btn-info" value="+" onclick="plus()">
       </div>
       <div class="btn-grp">
-        <input type="button" class="btn btn-primary" id="btn6" value="6" onclick="display(6)">
-        <input type="button" class="btn btn-primary" id="btn5" value="5" onclick="display(5)">
-        <input type="button" class="btn btn-primary" id="btn4" value="4" onclick="display(4)">
-        <input type="button" class="btn btn-primary" id="btnMin" value="-" onclick="minus()">
+        <input type="button" class="btn btn-dark" value="6" onclick="display(6)">
+        <input type="button" class="btn btn-dark" value="5" onclick="display(5)">
+        <input type="button" class="btn btn-dark" value="4" onclick="display(4)">
+        <input type="button" class="btn btn-info" value="-" onclick="minus()">
       </div>
       <div class="btn-grp">
-        <input type="button" class="btn btn-primary" id="btn3" value="3" onclick="display(3)">
-        <input type="button" class="btn btn-primary" id="btn2" value="2" onclick="display(2)">
-        <input type="button" class="btn btn-primary" id="btn1" value="1" onclick="display(1)">
-        <input type="button" class="btn btn-primary" id="btnMul" value="*" onclick="multiply()">
+        <input type="button" class="btn btn-dark" value="3" onclick="display(3)">
+        <input type="button" class="btn btn-dark" value="2" onclick="display(2)">
+        <input type="button" class="btn btn-dark" value="1" onclick="display(1)">
+        <input type="button" class="btn btn-info" value="x" onclick="multiply()">
       </div>
       <div class="btn-grp">
-        <input type="button" class="btn btn-primary" id="btn0" value="0" onclick="display(0)">
-        <input type="button" class="btn btn-primary" id="btnDot" value="." onclick="displayDot()">
-        <input type="button" class="btn btn-primary" id="btnEq" value="=" onclick="equal()">
-        <input type="button" class="btn btn-primary" id="btnDiv" value="/" onclick="divide()">
+        <input type="button" class="btn btn-dark" value="0" onclick="display(0)">
+        <input type="button" class="btn btn-dark" value="." onclick="displayDot()">
+        <input type="button" class="btn btn-danger" value="DEL" onclick="del()">
+        <input type="button" class="btn btn-info" value="÷" onclick="divide()">
+      </div>
+      <div class="btn-gp">
+        <input type="button" class="btn btn-primary" value="AC" onclick="ac()">
+        <input type="button" class="btn btn-success" value="=" onclick="equal()">
       </div>
     </div>
     <script src="js/main.js"></script>
